# chbs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
examples/: passphrase.rs  passphrase_config.rs  sampler.rs
src/: config.rs  entropy.rs  lib.rs  prelude.rs  probability.rs  scheme.rs  word.rs
src/component/: mod.rs  phrase.rs  traits.rs  word.rs
