[package]
name = "chbs"
version = "0.0.10"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/timvisee/chbs"
repository = "https://gitlab.com/timvisee/chbs"
documentation = "https://docs.rs/chbs"
description = "A crate providing secure passphrase generation based on a wordlist"
keywords = [
    "correct",
    "horse",
    "diceware",
    "password-generator",
    "password",
]
categories = [
    "cryptography",
]
edition = "2018"

[badges]
gitlab = { repository = "timvisee/chbs", branch = "master" }

[dependencies]
derive_builder = "0.9"
failure = "0.1"
rand = "0.7"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
