[package]
name = "chbs"
version = "0.1.1"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/timvisee/chbs"
repository = "https://gitlab.com/timvisee/chbs"
documentation = "https://docs.rs/chbs"
description = "A crate providing secure passphrase generation based on a wordlist"
keywords = [
    "correct",
    "horse",
    "diceware",
    "password-generator",
    "password",
]
categories = [
    "cryptography",
]
edition = "2018"

[dependencies]
derive_builder = "0.10"
rand = "0.8"
thiserror = "1.0.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", features = ["js"]}

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
